# training-bird-detection-classifier

./: .gitignore  README.md  dfine_m_slim.json  main.py  pyproject.toml
data/: ML__2026-07-09T23-53_photo_CO-CAL.csv  colombia_species_catalog.json  spicies.txt
docs/: DATA.md  MODELS.md
ipynb/: colab_pipeline.ipynb
pipelines/: __init__.py
pipelines/download_data/: __init__.py  cli.py
pipelines/download_data/application/: __init__.py  download.py
pipelines/download_data/domain/: __init__.py
pipelines/download_data/infrastructure/: __init__.py  gbif_client.py  icesi_import.py  inaturalist_client.py  macaulay_client.py
pipelines/extract_bb/: __init__.py  cli.py
pipelines/extract_bb/application/: __init__.py  extract.py
pipelines/extract_bb/domain/: __init__.py
pipelines/extract_bb/infrastructure/: __init__.py  dfine_detector.py  yolo_detector.py
pipelines/predict_model/: cli.py
pipelines/predict_model/application/: __init__.py  predict.py
pipelines/predict_model/domain/: __init__.py
pipelines/predict_model/infrastructure/: __init__.py
pipelines/shared/: __init__.py  catalog.py  coverage.py  crop.py  csv_manifest.py  dedupe.py  http_retry.py  licenses.py  logging_utils.py  metrics.py  paths.py  species.py  split.py  taxonomy.py  yolo_io.py
pipelines/train_classifier/: __init__.py  cli.py
pipelines/train_classifier/application/: __init__.py  train.py
pipelines/train_classifier/domain/: __init__.py
pipelines/train_classifier/infrastructure/: __init__.py  models.py
pipelines/train_model/: __init__.py  cli.py
pipelines/train_model/application/: __init__.py
pipelines/train_model/domain/: __init__.py
pipelines/train_model/infrastructure/: __init__.py  yolo_trainer.py
tests/: test_api_checkpoint.py  test_catalog_csv.py  test_cli_smoke.py  test_coverage.py  test_crop.py  test_dedupe.py  test_download_api_quota.py  test_extract_thresholds.py  test_licenses.py  test_split.py  test_taxonomy.py
