[project]
name = "avesia-yolo"
version = "0.1.0"
description = "Pipelines for multi-class bird detection (YOLO26) with dfine-cpp auto-labeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "ultralytics>=8.3.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

# TensorRT / dfine are installed manually (see docs/MODELS.md); not declared as
# package extras because the NVIDIA wheel index is environment-specific.

[project.scripts]
avesia-download = "pipelines.download_data.cli:main"
avesia-extract = "pipelines.extract_bb.cli:main"
avesia-train = "pipelines.train_model.cli:main"
avesia-predict = "pipelines.predict_model.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[tool.uv]
package = true
