[project]
name = "avesia-yolo"
version = "0.1.0"
description = "YOLO bird detection + specialized species classifiers for Colombian avifauna"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.3.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
avesia-download = "pipelines.download_data.cli:main"
avesia-extract = "pipelines.extract_bb.cli:main"
avesia-train = "pipelines.train_model.cli:main"
avesia-train-cls = "pipelines.train_classifier.cli:main"
avesia-predict = "pipelines.predict_model.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
